--- a/music_controller/frontend/package.json
+++ b/music_controller/frontend/package.json
@@ -2,8 +2,9 @@
   "name": "frontend",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts":{
+    "dev": "webpack --mode development  --watch",
+    "build": "webpack --mode production" 
   },
   "keywords": [],
   "author": "",
